--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,9 @@
 baseURL = 'http://myriamtousignant.com/'
-languageCode = 'fr-ca'
+languageCode = 'fr'
 title = 'Myriam Tousignant'
+googleAnalytics = 'UA-79769053-2'
+
 [params]
 copyrightInfo = '© 2021 Myriam Tousignant Tous Droits Réservés.'
+description = 'Artiste, peintre en art contemporain'
+keywords = 'Myriam Tousignant, artiste, peintre, peinture, art conteporain, vidéo, animation, Myriam,  Tousignant, expositions, exposition, UQÀM, myriam, myriam tousignant, tousignant'
