Add instagram link button

--- a/config.toml
+++ b/config.toml
@@ -8,3 +8,4 @@ publishDir = 'docs'
 copyrightInfo = '© 2021 Myriam Tousignant Tous Droits Réservés.'
 description = 'Artiste, peintre en art contemporain'
 keywords = 'Myriam Tousignant, artiste, peintre, peinture, art conteporain, vidéo, animation, Myriam,  Tousignant, expositions, exposition, UQÀM, myriam, myriam tousignant, tousignant'
+instagram = 'https://www.instagram.com/myriamt34'
