--- a/config.toml
+++ b/config.toml
@@ -11,4 +11,4 @@ unsafe= true
 copyrightInfo = '© 2021 Myriam Tousignant Tous Droits Réservés.'
 description = 'Artiste, peintre en art contemporain'
 keywords = 'Myriam Tousignant, artiste, peintre, peinture, art conteporain, vidéo, animation, Myriam,  Tousignant, expositions, exposition, UQÀM, myriam, myriam tousignant, tousignant'
-instagram = 'https://www.instagram.com/myriamt34'
+instagram = 'https://www.instagram.com/myriamtousignant_art/'
