--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,6 @@
 baseURL = 'https://myriamtousignant.com/'
 languageCode = 'fr'
 title = 'Myriam Tousignant'
-googleAnalytics = 'G-5FWE4D9ED7'
 publishDir = 'docs'
 theme = ["hugo-shortcode-gallery"]
 
@@ -15,4 +14,8 @@ keywords = 'Myriam Tousignant, artiste, peintre, peinture, art conteporain, vid√
 instagram = 'https://www.instagram.com/myriamtousignant_art/'
 onlineshop = '/boutique'
 galleryLoadJQuery = true
+
+[services]
+  [services.googleAnalytics]
+    id = 'G-5FWE4D9ED7'
 
